# iptax

./: .editorconfig  .gitignore  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  pyproject.toml
.github/workflows/: cherry-picker.yml  ci.yml  release.yml
.github/workflows/release/: bump_main_dev.py  check_dev_version.py  generate_checksums.py  get_release_info.py  strip_dev_version.py  update_version.py  version_utils.py
docs/: ai-cache-design.md  architecture.md  edge-cases.md  examples.md  implementation.md  mock-workday-server-design.md  project.md  requirements.md  testing.md  wd-calendar-scrape.md  workflows.md
scripts/: fix_whitespace.py  gh-comments.py  setup_test_did_config.py
src/iptax/: __init__.py  cli.py  config.py  did.py  did_integration.py  history.py  models.py  timing.py
src/iptax/ai/: __init__.py  cache.py  models.py  prompts.py  provider.py  review.py  tui.py
src/iptax/cache/: __init__.py  history.py  inflight.py
src/iptax/cli/: __init__.py  app.py  elements.py  flows.py  mocks.py  utils.py
src/iptax/config/: __init__.py  base.py  interactive.py
src/iptax/report/: __init__.py  compiler.py  fonts.py  generator.py
src/iptax/report/templates/: styles.css  tax_report.html  work_card.html
src/iptax/utils/: __init__.py  env.py  logging.py
src/iptax/workday/: __init__.py  auth.py  browser.py  client.py  driver.py  models.py  prompts.py  protocols.py  scraping.py  utils.py  validation.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_ai_provider.py  test_did.py  test_did_integration.py  test_placeholder.py  test_report_generation.py  test_workday_e2e.py
tests/e2e/fixtures/: __init__.py  calendar_data.py
tests/e2e/mock_servers/: __init__.py  api_routes.py  app.py  sso_routes.py  workday_routes.py
tests/e2e/mock_servers/templates/: sso_login.html  workday_home.html  workday_time.html
tests/unit/: __init__.py  test_cli.py  test_config.py  test_did.py  test_did_integration.py  test_history.py  test_holiday_tracking.py  test_logging.py  test_models.py  test_release_scripts.py  test_timing.py
tests/unit/ai/: __init__.py  test_cache.py  test_models.py  test_prompts.py  test_provider.py  test_review.py  test_tui.py
tests/unit/cache/: test_history.py  test_inflight.py
tests/unit/cli/: conftest.py  test_app_errors.py  test_elements.py  test_flows.py  test_mocks.py  test_total_days_calculation.py  test_utils.py
tests/unit/report/: __init__.py  test_compiler.py  test_fonts.py  test_generator.py
tests/unit/workday/: __init__.py  fakes.py  test_auth.py  test_browser.py  test_client.py  test_driver.py  test_models.py  test_prompts.py  test_scraping.py  test_utils.py  test_validation.py
